--- a/facts-ios/Base.lproj/Main.storyboard
+++ b/facts-ios/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="52" y="200" width="216" height="139"/>
                                 <color key="tintColor" red="0.2627450980392157" green="1" blue="0.50980392156862742" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="139" id="KTp-mS-e3y"/>
+                                    <constraint firstAttribute="height" constant="139" id="XW9-ef-Q6w"/>
                                     <constraint firstAttribute="width" constant="216" id="wjq-fJ-VvP"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="17"/>
@@ -55,10 +55,12 @@
                         <constraints>
                             <constraint firstItem="ANN-qO-dcd" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="36" id="9v3-a0-Isc"/>
                             <constraint firstItem="ANN-qO-dcd" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="40" id="LXA-Ir-5Md"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="tBg-Cy-kHJ" secondAttribute="trailing" constant="36" id="Lqp-wl-WMa"/>
                             <constraint firstItem="gJn-eS-2jh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="36" id="Myw-OD-z9T"/>
                             <constraint firstItem="tBg-Cy-kHJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="36" id="TPO-tZ-y1R"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="gJn-eS-2jh" secondAttribute="bottom" constant="90" id="dkg-gj-W2G"/>
                             <constraint firstItem="tBg-Cy-kHJ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="180" id="tgY-Yi-6Ot"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gJn-eS-2jh" secondAttribute="trailing" constant="36" id="yUd-wr-xgO"/>
                         </constraints>
                     </view>
                     <connections>
